[tool.poetry]
name = "thehttpbot"
version = "0.1.0"
description = ""
authors = ["thegamecracks <61257169+thegamecracks@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.0.0"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
